--- a/desktop.ini
+++ b/desktop.ini
@@ -5,10 +5,10 @@ ConfirmFileOp=0
 NoSharing=1
 IconFile=/ApacheCAML.jpeg
 IconIndex=0
-InfoTip=The source repository for seanpm2001s experience and knowledge of the CAML language.
+InfoTip=The source repository for seanpm2001s experience and knowledge of the CAML programming language.
 
 # File info
 # File type: Windows INI file [desktop.ini] (*.ini)
-# File version: 1 (2022, Thursday, October 6th at 2:50 pm PST)
+# File version: 2 (2022, Thursday, October 6th at 2:52 pm PST)
 # Line count (including blank lines and compiler line): 15
 # End of script
